<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity">

    <TextView
        android:id="@+id/txtLogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/login"
        android:textColor="@color/black"
        android:textSize="36sp"
        android:textStyle="bold"
        android:layout_margin="50dp"
        android:gravity="center" />

    <EditText
        android:id="@+id/etUsuario"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/txtLogin"
        android:hint="@string/usuario"
        android:layout_margin="10dp"
        android:padding="20dp"
        android:inputType="textPersonName"
        android:autofillHints="Usuário" />

    <EditText
        android:id="@+id/etSenha"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/etUsuario"
        android:hint="@string/senha"
        android:layout_margin="10dp"
        android:padding="20dp"
        android:inputType="textPassword"
        android:autofillHints="Senha" />
    
    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/etSenha"
        android:text="@string/btnLogin"
        android:backgroundTint="@color/purple_700"
        android:layout_centerHorizontal="true"
        android:layout_margin="20dp" />

</RelativeLayout>